..F....... [ZBX-15412] fixed Name column overlaps the Application column in the Template view

--- a/frontends/php/styles/blue-theme.css
+++ b/frontends/php/styles/blue-theme.css
@@ -693,8 +693,10 @@ output {
     position: relative;
     border-bottom: 1px solid #ebeef0;
     line-height: 18px;
-    vertical-align: top;
-    max-width: 300px; }
+    vertical-align: top; }
+    .list-table tbody th.latest-value,
+    .list-table td.latest-value {
+      max-width: 300px; }
   .list-table tbody th {
     text-align: left; }
   .list-table .vertical_rotation_inner {
